--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Dnd5e-quickref
 description: Quick reference sheet for D&D 5e
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 
 gems:
   - jekyll-mentions
